Prueba inicial, falta probar el handler.